--- a/Pilha_Estatica/PilhaEstatica/PilhaEstatica.cbp
+++ b/Pilha_Estatica/PilhaEstatica/PilhaEstatica.cbp
@@ -31,6 +31,10 @@
 		<Compiler>
 			<Add option="-Wall" />
 		</Compiler>
+		<Unit filename="PilhaEstatica.c">
+			<Option compilerVar="CC" />
+		</Unit>
+		<Unit filename="PilhaEstatica.h" />
 		<Unit filename="main.c">
 			<Option compilerVar="CC" />
 		</Unit>
